# TrueShot

./: .gitignore  CMakeLists.txt  README.md  RunTrueShot.bat  RunTrueShot.sh
include/: audio_system.h  audio_types.h  fps_camera.h  physics_types.h  player_controller.h  shader.h  weapon_system.h  weapon_types.h
network_module/: CMakeLists.txt
network_module/include/Network/: Bitstream.h  ENetWrapper.h  NetCommon.h  PacketTypes.h
network_module/src/: Client.cpp  ENetWrapper.cpp  NetCommon.cpp  Server.cpp  main_client.cpp  main_server.cpp
shaders/: basic.vert  fragment.glsl  vertex.glsl
src/: audio_system.cpp  fps_camera.cpp  main.cpp  player_controller.cpp  shader.cpp  weapon_system.cpp
